feat(player): add optional JavaFX prototype